// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbsenceCaseStatusTag Defers to absence case if no Open managed requirements returned 1`] = `
<div>
  <span
    class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-success-dark bg-success-lighter"
  >
    Approved
  </span>
</div>
`;

exports[`AbsenceCaseStatusTag renders the component with 'No Action Required' when managedRequirements is empty and has a pending-line status value 1`] = `
<div>
  <span
    class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-base-darker bg-base-lightest"
  >
    No action required
  </span>
</div>
`;

exports[`AbsenceCaseStatusTag renders the component with 'Review By {{date}}' when managedRequirements contains Open requirements not in the past 1`] = `
<div>
  <span
    class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-base-darkest bg-warning-lighter"
  >
    Review by 7/22/2021
  </span>
</div>
`;

exports[`AbsenceCaseStatusTag renders the component with error state and mapped status for 'Declined' 1`] = `
<div>
  <span
    class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-error-darker bg-error-lighter"
  >
    Denied
  </span>
</div>
`;

exports[`AbsenceCaseStatusTag renders the component with inactive state and mapped status for 'Completed' 1`] = `
<div>
  <span
    class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-base-darker bg-base-lightest"
  >
    Closed
  </span>
</div>
`;

exports[`AbsenceCaseStatusTag renders the component with inactive state for 'Closed' 1`] = `
<div>
  <span
    class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-base-darker bg-base-lightest"
  >
    Closed
  </span>
</div>
`;

exports[`AbsenceCaseStatusTag renders the component with success state for 'Approved' 1`] = `
<div>
  <span
    class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-success-dark bg-success-lighter"
  >
    Approved
  </span>
</div>
`;
